[gd_scene load_steps=6 format=3 uid="uid://dhi6vi7j1vbp7"]

[ext_resource type="Script" uid="uid://c6gpmhg03maag" path="res://Scenes/Microgames/MicrogameScripts/YesNo/correct_incorrect.gd" id="1_ctstw"]
[ext_resource type="Texture2D" uid="uid://c67iack1tqtl0" path="res://Assets/Sprites/YesNo/paper-okay.png" id="2_hv7dd"]
[ext_resource type="Texture2D" uid="uid://s537p4gld5wa" path="res://Assets/Sprites/YesNo/paper-cross.png" id="3_06ieh"]
[ext_resource type="AudioStream" uid="uid://dq25twdwj32dj" path="res://Assets/SFX/correct.wav" id="4_vru3x"]
[ext_resource type="AudioStream" uid="uid://cfywerm1yambw" path="res://Assets/SFX/incorrect.wav" id="5_g3xtf"]

[node name="CorrectIncorrect" type="Node2D"]
script = ExtResource("1_ctstw")

[node name="Correct" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_hv7dd")

[node name="Incorrect" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_06ieh")

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vru3x")
volume_db = -25.758
bus = &"SFX"

[node name="IncorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g3xtf")
volume_db = -25.758
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
